version/0.21/_sources/api/solver/_autosummary/settings/tsolidus.rst.txt
:orphan:

.. _tsolidus:

tsolidus
========

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.tsolidus.tsolidus
    :show-inheritance:

.. rubric:: Attributes

=========================   ====================================================

Attribute                                                                Summary

=========================   ====================================================
:ref:`option <option_12>`       Select method for calculating material property.

:ref:`value <value_11>`                     Specify the constant property value.

=========================   ====================================================

.. rubric:: Included in:

======================================   ====================================

Parent                                                                Summary

======================================   ====================================
:ref:`fluid_child <fluid_child>`                'child_object_type' of fluid.

:ref:`material_child <material_child>`       'child_object_type' of material.

======================================   ====================================

